# raw-dataclasses-ai-pattern

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: memory_comparison.py
examples/: ecommerce_pipeline.py  vs_sqlalchemy_demo.py
patterns/: __init__.py  message_types.py  pipeline_stages.py  result_types.py
tests/: __init__.py  test_message_types.py  test_pipeline_stages.py  test_result_types.py
